--- a/internship/index.html
+++ b/internship/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- ✅ This is handled automatically by Vite -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
