--- a/internship/index.html
+++ b/internship/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/vite.svg" type="image/svg+xml" />
-    <title>Your App</title>
-    <!-- Optional: Tailwind via CDN (not recommended for prod) -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
